--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
@@ -19,21 +20,30 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align:center;
+    text-align: center;
     padding: 20px;
     color: white;
 }
 
 header h1 {
-        font-size: 3rem;
-        margin-bottom: 20px;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    font-size: 3rem;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 header h2 {
-        font-size: 1.5rem;
-        margin-bottom: 40px;
-        transform: translateY(-20px);
+    font-size: 1.5rem;
+    margin-bottom: 40px;
+    transform: translateY(-20px);
+}
+
+.ilustracao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    margin-top: 40px;
 }
 
 #sobre-mim h2 {
@@ -45,8 +55,7 @@ header h2 {
     font-size: 2.0rem;
     line-height: 1.6;
     text-align: center;
-    
-    
+    margin-bottom: 20px;
 }
 
 #sobre-mim p {
@@ -60,19 +69,19 @@ header h2 {
 }
 
 #cta-btn {
-        padding: 15px 30px;
-        font-size: 1.2rem;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        background: white;
-        color: #4f46e5;
-        transition: 0.3s;
+    padding: 15px 30px;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    background: white;
+    color: #4f46e5;
+    transition: 0.3s;
 }
 
-#cta-btn:hover{
-        background: #232d9c;
-        color: #ffffff;
+#cta-btn:hover {
+    background: #232d9c;
+    color: #ffffff;
 }
 
 /* cards de habilidades */
@@ -89,11 +98,11 @@ section#sobre h2 {
 }
 
 section#sobre h4 {
-        font-size: 1.5rem;
-        margin-bottom: 50px;
-        color: #d1d1d1;
-        transform: translateY(20px);
-        text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 50px;
+    color: #d1d1d1;
+    transform: translateY(20px);
+    text-align: center;
 }
 
 .skills {
@@ -113,7 +122,7 @@ section#sobre h4 {
     min-height: 70px;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    transition: 0.3s;   
+    transition: 0.3s;
 }
 
 .skills div:hover {
@@ -124,14 +133,14 @@ section#sobre h4 {
 
 .skill-icon {
     font-size: 3rem;
-    margin: 0px;   
+    margin: 0px;
 }
 
 .titulo-icon {
     font-size: 1.2rem;
-        margin: 0;
-        color: #d1d1d1;
-        transform: none;
+    margin: 0;
+    color: #d1d1d1;
+    transform: none;
 }
 
 
@@ -153,15 +162,15 @@ section#sobre h4 {
     font-size: 1.2rem;
     border: none;
     border-radius: 20px;
-    background:white;
+    background: white;
     color: #4f46e5;
     cursor: pointer;
     transition: 0.3s;
 }
 
-#cta2-btn:hover{
-        background: #232d9c;
-        color: #ffffff;
+#cta2-btn:hover {
+    background: #232d9c;
+    color: #ffffff;
 }
 
 /* Resposividade */
@@ -171,7 +180,7 @@ section#sobre h4 {
     }
 
     #cta-btn {
-        padding:12px 25px;
+        padding: 12px 25px;
         font-size: 1rem;
     }
 
@@ -202,8 +211,9 @@ section#sobre h4 {
     #cta-final p {
         font-size: 1rem;
     }
+
     #cta2-btn {
-        padding:12px 30px;
+        padding: 12px 30px;
         font-size: 1rem;
     }
 }
@@ -237,15 +247,15 @@ section#sobre h4 {
     animation: baloomAnim 2.5s ease-in-out infinite;
 }
 
-.baloom::after{
-    content:"";
+.baloom::after {
+    content: "";
     width: 12px;
     height: 12px;
     position: absolute;
     bottom: -6px;
-    left:50%;
+    left: 50%;
     background: #6e266e;
-    border:transparent #333333 #333333 transparent;
+    border: transparent #333333 #333333 transparent;
     transform: translateX(90%) rotate(45deg);
     border-radius: 2px;
 }
@@ -254,9 +264,11 @@ section#sobre h4 {
     0% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(-10px);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -265,14 +277,14 @@ section#sobre h4 {
 #contato {
     display: flex;
     justify-content: right;
-    padding: 20px 0px; 
+    padding: 20px 0px;
     gap: 0px;
     flex-direction: row;
     z-index: 9999;
     position: fixed;
-    top: 0;                  
-    right: 0;             
-    width: 100%; 
+    top: 0;
+    right: 0;
+    width: 100%;
 }
 
 #contato a {
@@ -294,21 +306,21 @@ section#sobre h4 {
 }
 
 .foto-perfil {
-    position: fixed;        /* sempre visível */
-    top: 10px;              /* distância do topo */
-    left: 20px;             /* posição na tela */
-    
+    position: fixed;
+    /* sempre visível */
+    top: 10px;
+    /* distância do topo */
+    left: 20px;
+    /* posição na tela */
+
     width: 70px;
     height: 70px;
     object-fit: cover;
-    z-index: 9999;          /* fica por cima de tudo */
-    
+    z-index: 9999;
+    /* fica por cima de tudo */
+
 }
 
 .foto-perfil:hover {
     transform: scale(1.08);
 }
-
-
-
-
