--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,12 +8,14 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'ubuntu', sans-serif;
     background: linear-gradient(135deg, #100f24, #1c1d81);
     color: #333;
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    font-weight: 400;
+  font-style: normal;
 }
 
 header {
@@ -70,13 +74,14 @@ header h2 {
 
 #cta-btn {
     padding: 15px 30px;
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    background: white;
-    color: #4f46e5;
+    background: rgb(22, 55, 117);
+    color: #b1b1b1;
     transition: 0.3s;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 #cta-btn:hover {
@@ -93,36 +98,42 @@ section#sobre {
 
 section#sobre h2 {
     font-size: 2.5rem;
-    color: #cdcbfa;
+    color: #d1d1d1;
     margin-bottom: 15px;
 }
 
 section#sobre h4 {
+    display: flex;
     font-size: 1.5rem;
     margin-bottom: 50px;
     color: #d1d1d1;
     transform: translateY(20px);
     text-align: center;
+    margin-left: 20px;
+    
 }
 
 .skills {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 30px;
     flex-wrap: wrap;
+    margin-left: 20px;
 }
 
 .card {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     gap: 15px;
     background: #2c2c5e;
     padding: 5px;
     width: 280px;
-    min-height: 70px;
+    min-height: 60px;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     transition: 0.3s;
+    
 }
 
 .skills div:hover {
@@ -159,13 +170,15 @@ section#sobre h4 {
 
 #cta2-btn {
     padding: 15px 40px;
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     border: none;
     border-radius: 20px;
-    background: white;
-    color: #4f46e5;
+    background: rgb(22, 55, 117);
+    color: #b1b1b1;
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+
 }
 
 #cta2-btn:hover {
@@ -193,6 +206,7 @@ section#sobre h4 {
     }
 
     .skills {
+        display: flex;
         flex-direction: column;
         gap: 20px;
     }
@@ -237,8 +251,6 @@ section#sobre h4 {
     color: #d1d1d1;
     margin-bottom: 15px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 15px;
     background: #6e266e;
     padding: 8px 15px;
@@ -282,8 +294,8 @@ section#sobre h4 {
     flex-direction: row;
     z-index: 9999;
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 20px;
     width: 100%;
 }
 
@@ -298,6 +310,7 @@ section#sobre h4 {
     cursor: pointer;
     transition: transform 0.2s ease;
     color: #686767;
+    
 }
 
 .info-item i:hover {
